<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:background="@color/mainBlue"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/profileBottomPanelText"
        style="@style/iconRegular"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/mainBlue"
        android:gravity="center"
        android:text="@string/profile_ico" />

    <TextView
        android:id="@+id/mainScreenBottomPanelText"
        style="@style/iconSolid"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/mainBlue"
        android:gravity="center"
        android:text="@string/main_screen_ico" />

    <TextView
        android:id="@+id/chatBottomPanelText"
        style="@style/iconRegular"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/mainBlue"
        android:gravity="center"
        android:text="@string/chat_ico" />

</LinearLayout>