<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/logInPages"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.RegistrationActivity">

    <LinearLayout
        style="@style/loginPackageMainLinearLayout"
        app:layout_constraintBottom_toTopOf="@+id/saveRegistrationBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bun_beauty" />

        <LinearLayout
            style="@style/loginPackageLinearLayout"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phoneRegistrationInput"
                style="@style/loginPackageInput"
                android:enabled="false"
                android:hint="@string/phoneRegistration"
                android:inputType="phone" />

            <EditText
                android:id="@+id/nameRegistrationInput"
                style="@style/loginPackageInput"
                android:hint="@string/nameRegistration"
                android:inputType="textPersonName|textCapSentences" />

            <EditText
                android:id="@+id/surnameRegistrationInput"
                style="@style/loginPackageInput"
                android:hint="@string/surname"
                android:inputType="textPersonName|textCapSentences"/>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Spinner
                    android:id="@+id/citySpinnerRegistrationSpinner"
                    style="@style/loginPackageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/choice_cites" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveRegistrationBtn"
        style="@style/loginButton"
        android:text="сохранить данные"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>