<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".cleanArchitecture.mvp.activities.fragments.SearchServiceFragment">

    <LinearLayout
        android:id="@+id/searchTopPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@color/mainBlue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backSearchFragmentText"
            style="@style/iconSolid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/back_ico" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkBlue"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/searchLineSearchServiceInput"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/block_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/findServiceSearchServiceText"
                    style="@style/iconSolid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/search_ico" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/darkBlue"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/citySearchServiceSpinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:entries="@array/cities"
                    android:popupBackground="@color/white" />

                <Spinner
                    android:id="@+id/searchBySearchServiceSpinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:entries="@array/searchBy"
                    android:popupBackground="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>